# llm-council

./: README.md  prd.md  pyproject.toml  requirements.txt  startup.sh
.github/agents/: prd-writer.agent.md  se-git-ops-specialist.agent.md  se-product-manager.agent.md  se-tech-writer.agent.md
.github/instructions/: copitlot-instructions.md
backend/: azure_inference.py  config.py  council.py  main.py  settings.json  settings.py  storage.py
backend/orchestrators/: __init__.py  common.py  council.py  dxo.py  ensemble.py  sequential.py  workflow_adapter.py
backend/static/: index.html
backend/static/assets/: index-MEYOxjnl.css  index-ssKrNKX3.js
docs/: prd.md
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage2DXO.jsx  Stage2Ensemble.jsx  Stage2Sequential.jsx  Stage3.css  Stage3.jsx  ThemeToggle.css  ThemeToggle.jsx
infra/: main.bicep  params.dev.bicepparam
scripts/: deploy_appservice.sh  package_appservice_zip.sh
