[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.19.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.9.0",
    "aiofiles>=25.1.0",
]
